--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -1,27 +1,31 @@
 {% load static  %}
 <!DOCTYPE html>
 <html>
+
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>{% block title %} {% endblock %}</title>
     
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">  
-    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}" />
     <script type="text/javascript" src="{% static 'js/modernizr.min.js' %}"></script>
 </head>
+
 <body>
 
     <div id="container-fluid">
-        
+
         <!--header start -->
         <div id="header-wrap">
-                <div class="content-width">
+            <div class="content-width">
                 <header id="header">
                     <div class="header__left">
-                        <a href="{% url 'home' %}"><img width="58.2" src="{% static 'images/logo.svg' %}" alt="LOGO"></a>
+                        <a href="{% url 'home' %}"><img width="58.2" src="{% static 'images/logo.svg' %}"
+                                alt="LOGO"></a>
                         <span class="menu-btn">
                             <i></i>
                             <i></i>
@@ -30,11 +34,18 @@
                     </div>
                     <div class="header__right">
                         <ul class="main-menu">
-                            <li ><a href="{% url 'home' %}"{% if 'home' in  request.path %}class="active"{% endif %}>Home</a></li>
-                            <li><a href="{% url 'problem_statements' %}"{% if 'problem_statements' in  request.path %}class="active"{% endif %}>Problem Statements</a></li>
-                            <li><a href="{% url 'projects' %}"{% if 'projects' in  request.path %}class="active"{% endif %}>Projects</a></li>
-                            <li><a href="{% url 'community' %}"{% if 'community' in  request.path %}class="active"{% endif %}>Community</a></li>
-                            <li><a href="{% url 'andablog:entrylist' %}"{% if 'andablog:entrylist' in  request.path %}class="active"{% endif %}>Blog</a></li>
+                            <li><a href="{% url 'home' %}" {% if 'home' in  request.path %}class="active"
+                                    {% endif %}>Home</a></li>
+                            <li><a href="{% url 'problem_statements' %}"
+                                    {% if 'problem_statements' in  request.path %}class="active" {% endif %}>Problem
+                                    Statements</a></li>
+                            <li><a href="{% url 'projects' %}" {% if 'projects' in  request.path %}class="active"
+                                    {% endif %}>Projects</a></li>
+                            <li><a href="{% url 'community' %}" {% if 'community' in  request.path %}class="active"
+                                    {% endif %}>Community</a></li>
+                            <li><a href="{% url 'andablog:entrylist' %}"
+                                    {% if 'andablog:entrylist' in  request.path %}class="active" {% endif %}>Blog</a>
+                            </li>
                             <li class="menu__hasChild"><a href="{% url 'about' %}">About</a>
                                 <div class="sub-menu__outer">
                                     <ul class="sub-menu">
@@ -53,25 +64,23 @@
             </div>
         </div>
         <!--header end -->
-{% block main %}  
-{% endblock %}
-{% include 'HFC/footer.html' %}
-</div><!--container-fluid -->
+        {% block main %}
+        {% endblock %}
+        {% include 'HFC/footer.html' %}
+    </div>
+    <!--container-fluid -->
 
 
-<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-<script src="https://kit.fontawesome.com/2babd4a8e5.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+    <script src="https://kit.fontawesome.com/2babd4a8e5.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
-{%block css %}{%endblock%}
-{% block js %}
+    <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+    {%block css %}{%endblock%}
+    {% block js %}
 
-{% endblock %}
+    {% endblock %}
 
 </body>
+
 </html>
-
-
-
-
