--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -1,74 +1,82 @@
-
 {% extends 'HFC/layout.html' %}
 {% load static from staticfiles %}
 
-  <head>
-{% block title %} Problem Statements | Hack For Change {% endblock %}
-</head>  
+<head>
+    {% block title %} Problem Statements | Hack For Change {% endblock %}
+</head>
 
 
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
-        <div class="content-width sm-content-width">
-            <div class="banner__main">
-                <h1>Problem Statements</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
-                <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a Problem Statement</a>
-            </div>
+    <div class="content-width sm-content-width">
+        <div class="banner__main">
+            <h1>Problem Statements</h1>
+            <p class="large">
+                Explore various problem statements suggested by organizations with deep domain expertise
+            </p>
+            <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a Problem Statement</a>
         </div>
     </div>
-    <!--Banner end -->
-    <!--main start -->
-    
-    <div id="main-wrap" class="main__large-pd">
-        <div class="content-width">
-            <div class="main">
-                <section id="contents">
-                        {% for prob_list in problems_list  %}
-                    <article class="post-blog">
-                        <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}</a></h4>
-                        <div class="badge-sec"><strong>Submitted By : </strong><span class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span>
-                        <strong>Issue Area : </strong><span class="badge badge--pink"></span>{{prob_list.issue_area}}</div>
-                        <p>{{prob_list.summary}}</p>
-                        <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span class="badge">{{prob_list.status}}</span></div>
-                        <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View Details</a>
-                    </article>
-                        {% endfor %}
-            </section><!--contents -->
-              <aside id="sidebar">
-                    <div class="sidebar__list">
-                            <p>Explore problem statements across various issue areas</p>
-                                <ul>
-                                    {% for prob_list in problems_list %}
-                                    <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
-                                    {% endfor %}
-                                </ul>
-                                    
-                    </div>
-                    <div class="newsletter">
-                            <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
-                            <form action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04" method="post"  target="_blank"  id="mc-embedded-subscribe-form" class="newsletter__form" novalidate>
-                                <p class="large bold">Get Latest Updates!</p>
-                                <input type="email" placeholder="Enter your email" name= "EMAIL" id="mce-EMAIL">
-                                <input class="btn btn--info" type="submit"  value="Subscribe">
-                                <div id="mce-responses" class="clear">
-                                        <div class="response" id="mce-error-response" style="display:none"></div>
-                                        <div class="response" id="mce-success-response" style="display:none"></div>
-                                    </div>
-                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
-                                </div>
-                            </form>
-                    </div> 
-                </aside><!--sidebar -->
-            </div>
-        </div>
-    </div>
-                       
-                            
-    
-            
-                
-{% endblock %}
+</div>
+<!--Banner end -->
+<!--main start -->
 
+<div id="main-wrap" class="main__large-pd">
+    <div class="content-width">
+        <div class="main">
+            <section id="contents">
+                {% for prob_list in problems_list  %}
+                <article class="post-blog">
+                    <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}</a></h4>
+                    <div class="badge-sec"><strong>Submitted By : </strong><span
+                            class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span>
+                        <strong>Issue Area : </strong><span class="badge badge--pink"></span>{{prob_list.issue_area}}
+                    </div>
+                    <p>{{prob_list.summary}}</p>
+                    <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span
+                            class="badge">{{prob_list.status}}</span></div>
+                    <a class="btn btn--border" href="{% url 'problem_discription' prob_list.title_slug %}">View
+                        Details</a>
+                </article>
+                {% endfor %}
+            </section>
+            <!--contents -->
+            <aside id="sidebar">
+                <div class="sidebar__list">
+                    <p>Explore problem statements across various issue areas</p>
+                    <ul>
+                        {% for prob_list in problems_list %}
+                        <li><a
+                                href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+
+                </div>
+                <div class="newsletter">
+                    <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
+                    <form
+                        action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                        method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
+                        novalidate>
+                        <p class="large bold">Get Latest Updates!</p>
+                        <input type="email" placeholder="Enter your email" name="EMAIL" id="mce-EMAIL">
+                        <input class="btn btn--info" type="submit" value="Subscribe">
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                        name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+        </div>
+        </form>
+    </div>
+    </aside>
+    <!--sidebar -->
+</div>
+</div>
+</div>
+{% endblock %}
