--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -4,81 +4,81 @@
 {% block main %}
 <!--Banner start -->
 <div class="banner-wrap">
-        <div class="content-width sm-content-width">
-            <div class="banner__main">
-                <h1>Suggest a Problem Statement</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
-            </div>
+    <div class="content-width sm-content-width">
+        <div class="banner__main">
+            <h1>Suggest a Problem Statement</h1>
+            <p class="large">
+                Suggest any problem statements in the areas of governance, civic engagement, social enterprise and disaster management
+            </p>
         </div>
+    </div>
 </div>
-    <!--Banner end -->
+<!--Banner end -->
 <!--main start -->
 <div id="main-wrap" class="main__large-pd">
-        <div class="content-width">
-            <div class="main">
-                <section id="contents">
-                    <form class="site-form" action="" method="post">
-                            {%csrf_token%}
-                            <div class="form-field">
-                                <label for="">Title</label>
-                                {{form.title}}
-                            </div>
-                            <div class="form-field">
-                                <label for="">Summary</label>
-                                {{form.summary}}
-                            </div>
-                            <div class="form-field">
-                                <label for="">Background Information</label>
-                                {{form.background_info}}
-                            </div>
-                            <div class="form-field">
-                            <label for="">Proposed Solution</label>
-                                {{form.proposed_solution}}
-                            </div>
+    <div class="content-width">
+        <div class="main">
+            <section id="contents">
+                <form class="site-form" action="" method="post">
+                    {%csrf_token%}
+                    <div class="form-field">
+                        <label for="">Title</label>
+                        {{form.title}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Summary</label>
+                        {{form.summary}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Background Information</label>
+                        {{form.background_info}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Proposed Solution</label>
+                        {{form.proposed_solution}}
+                    </div>
 
-                            <div class="form-field">
-                                <label for="">Related Links</label>
-                                {{form.related_link}}
-                            </div>
-                            <div class="form-field">
-                                <label for="">Issue Area</label>
-                                {{form.issue_area}}
-                            </div>
-                            
-                        
-                            
-                            
-                            
-                        <div class="btn-outer">
-                            <input class="btn btn--info btn--full"  type ="submit" value="Submit">
-                        </div>
-                    </form>
-                </section>
-                <aside id="sidebar">
-                        <div class="sidebar__list">
-                            <p>Explore problem statements across various issue areas</p>
-                            <ul>
-                                    {% for problem in all_problems %}
-                                <li><a href="{% url 'problem_statements_with_issuearea' problem.issue_area_slug %}">{{problem.issue_area}}</a></li>
-                                    {% endfor %}
-                            </ul>
-                        </div>
-                        <div class="newsletter">
-                            <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
-                            <form action="#" class="newsletter__form">
-                                <p class="large bold">Get Latest Updates!</p>
-                                <input type="email" placeholder="Enter your email">
-                                <input class="btn btn--info" type="submit" value="Subscribe">
-                            </form>
-                        </div>
-                    </aside><!--sidebar -->
+                    <div class="form-field">
+                        <label for="">Related Links</label>
+                        {{form.related_link}}
+                    </div>
+                    <div class="form-field">
+                        <label for="">Issue Area</label>
+                        {{form.issue_area}}
+                    </div>
+
+
+
+
+
+                    <div class="btn-outer">
+                        <input class="btn btn--info btn--full" type="submit" value="Submit">
+                    </div>
+                </form>
+            </section>
+            <aside id="sidebar">
+                <div class="sidebar__list">
+                    <p>Explore problem statements across various issue areas</p>
+                    <ul>
+                        {% for problem in all_problems %}
+                        <li><a
+                                href="{% url 'problem_statements_with_issuearea' problem.issue_area_slug %}">{{problem.issue_area}}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
-            </div>
+                <div class="newsletter">
+                    <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
+                    <form action="#" class="newsletter__form">
+                        <p class="large bold">Get Latest Updates!</p>
+                        <input type="email" placeholder="Enter your email">
+                        <input class="btn btn--info" type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </aside>
+            <!--sidebar -->
         </div>
-        <!--main end -->
-        
-
-                
+    </div>
+</div>
+<!--main end -->
 {%endblock%}
-            
-    
